--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
     <br>
     - Entrances 2 players wide
     <br>
+    - No bases on rooftops
+    <br>
 
     <h3>Voice/text chat rules</h3>
     - Don't mic-spam
