--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
     <br>
     - 1 mug every 20 min
     <br>
+    - Genetic Researcher can not get people's DNA at spawn
+    <br>
 
     <h3>Building rules</h3>
     - Bases must be raidable (Doors must not be blocked by props, keypads crackable)
